# pHashRis

./: .gitignore  CMakeLists.txt  DCTHash.cpp  DCTHash.h  DCTpHash.cpp  DCTpHash.h  Hamming.cpp  Hamming.h  HashStore.cpp  HashStore.h  MHpHash.cpp  MHpHash.h  README.md  RVpHash.cpp  RVpHash.h  Ris.h  main.cpp  pHashRis.cpp  pHashRis.h
benchmark/: benchmark.sh  config.sh  prepare_benchmark.sh  prepare_env.sh  roc.pg  run.sh  threshold_DCT.pg  threshold_MH.pg  threshold_RV.pg
benchmark/Result/: CMakeLists.txt  QueryResult.cpp  QueryResult.h  main.cpp
src/: CMakeLists.txt  DCTpHash.cpp  Hamming.cpp  HashStore.h  RVpHash.cpp  RVpHash.h
